--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
-Automate "CFBundleGetInfoString" in Info.plist
+FIXMEs && TODOs
 
-re-create bookviewer.nib w/o vrbigwordview requirement
+generalize rakefile, most local changes to app.rb file
 
-Open "Hamlet.txt" on start
+appcontroller to open "Hamlet.txt" on start
 
 PrefPane:
 * foregroundColor
@@ -15,14 +15,13 @@ Keyboard control:
 * space to togglePlayAndPause
 * arrow keys for next/previous word
 
-Silder is backwards: right is slower, should be faster.
+application icon
+icons for play/pause button
 
-Icon
-
-Show/hide controls?
+Show/hide controls
 
 Playback:
-* show articles with next word
-* length of word determines display time
+* show articles (a/an, the) with next word
+* length of word should determine display time
 
-Help book?
+Help book
